langtools/test/tools/javac/proprietary/WarnStaticImport.out
WarnStaticImport.java:12:23: compiler.warn.sun.proprietary: sun.misc.VM
- compiler.err.warnings.and.werror
1 error
1 warning
